src/test/deca/context/invalid/object/badInitField.deca
class X
{
  int a;
}
class A
{
  X a(int a){}
}

class B extends A
{
  int c = a(3);
}
